manifests/01-calico-policies/tier-platform/01-allow-kube-dns.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-kube-dns
  annotations:
    tigera.io/tier: platform
spec:
  selector: all()
  egress:
    - action: Allow
      protocol: UDP
      destination:
        selector: "k8s-app == 'kube-dns'"
        ports: [53]
  types:
    - Egress
