manifests/01-calico-policies/tier-platform/02-platform-allow-kube-api.yaml
# Allows all pods to access the Kubernetes API server (used by apps or for health checks).
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-kube-api
  annotations:
    tier:: platform
spec:
  selector: all()
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: "k8s-app == 'kubernetes'"
        ports: [443]
  types:
    - Egress
